# cairo_doc_gen

./: Cargo.toml  LICENSE  README.md  Scarb.toml  run_docgen.sh  test_contract.cairo
output/: contract_documentation.html
src/: html_renderer.rs  lib.rs  parser.rs
templates/: doc_template.html
